# CATHEDRAL

./: README.md
haskell-core/: cathedral.cabal
haskell-core/app/: Main.hs
haskell-core/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-core/dist-newstyle/packagedb/ghc-9.4.8/: cathedral-0.1.0.0-inplace.conf  package.cache
haskell-core/examples/: MergeSort.hs
haskell-core/src/: Main.hs
haskell-core/src/Cathedral/: Type.hs
haskell-core/src/Cathedral/Core/: Predicate.hs  Type.hs  Types.hs
